--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,3 @@
 arb-dir: lib/assets/strings
-template-arb-file: app_en.arb
+template-arb-file: app_ru.arb
 output-localization-file: app_strings.dart
