--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,15 @@ dependencies:
   equatable: ^2.0.3
   get_it: ^7.1.3
   google_fonts: ^2.1.0
+  fluttertoast: ^8.0.7
+  formz: ^0.4.0
+  pin_code_fields: ^7.2.0
+
+  firebase_core: ^1.3.0
+  firebase_analytics: ^8.1.2
+  firebase_auth: ^1.4.1
+  cloud_firestore: ^2.2.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -69,10 +78,15 @@ flutter:
     - family: Montserrat
       fonts:
         - asset: assets/fonts/Montserrat-Regular.ttf
+          weight: 400
         - asset: assets/fonts/Montserrat-Medium.ttf
+          weight: 500
         - asset: assets/fonts/Montserrat-SemiBold.ttf
+          weight: 600
         - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 700
         - asset: assets/fonts/Montserrat-Black.ttf
+          weight: 900
 
   #
   # For details regarding fonts from package dependencies,
